fix: set margin-bottom value for all major headers
Previous to this change, `margin-bottom` was set to zero for `h3`-level headers.

In some cases, the header overlapped with a codeblock thereby cutting off part of the text.

This change explicitly sets a `margin-bottom` value for `h1`, `h2`, and `h3` headers.

In addition, it groups common attributes together (like `font-weight` and `line-height`) and brings `font-size` in their targeted groups.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -254,26 +254,16 @@ body { margin-left: auto;
        max-width: 1400px;
        counter-reset: sidenote-counter; }
 
-h1 { font-weight: 400;
-     font-style: italic;
-     margin-top: 2.1rem;
-     margin-bottom: 0;
-     font-size: 2.2rem;
-     line-height: 1; }
+h1, h2, h3 {
+  font-weight: 400;
+  font-style: italic;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+  line-height: 1;
+}
 
-h2 { font-style: italic;
-     font-weight: 400;
-     margin-top: 2.1rem;
-     margin-bottom: 0;
-     font-size: 2.2rem;
-     line-height: 1; }
-
-h3 { font-style: italic;
-     font-weight: 400;
-     font-size: 1.7rem;
-     margin-top: 2rem;
-     margin-bottom: 0;
-     line-height: 1; }
+h1, h2 { font-size: 2.2rem; }
+h3 { font-size: 1.7rem; }
 
 hr { display: block;
      height: 1px;
